Fetching and displaying socket hostname and IP data from the host

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,5 +6,8 @@
             <h1>
                 Simple Web Application Using Python Flask Framework
             </h1>
+            <h2>
+                Response from host {{data.hostname}} with IP {{data.ip}}
+            </h2>
         </body>
 </html>
